manifests/04-supply-chain/02-resource-limits-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresourcelimits
  annotations:
    description: "Requires every container to declare both CPU and memory limits."
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresourcelimits

        violation[{"msg": msg}] {
          c := input_containers[_]
          not c.resources.limits.cpu
          msg := sprintf("Container '%v' must specify resources.limits.cpu", [c.name])
        }

        violation[{"msg": msg}] {
          c := input_containers[_]
          not c.resources.limits.memory
          msg := sprintf("Container '%v' must specify resources.limits.memory", [c.name])
        }

        input_containers[c] { c := input.review.object.spec.containers[_] }
        input_containers[c] { c := input.review.object.spec.initContainers[_] }
