manifests/04-supply-chain/03-allowed-registries-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: pod-allowed-registries
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
  parameters:
    registries:
      # Add your trusted registry prefixes here.
      - "docker.io/library/"
      - "docker.io/nextcloud/"
      - "docker.io/bitnami/"
      - "docker.io/falcosecurity/"
      - "quay.io/minio/"
      - "quay.io/kubescape/"
      - "registry.k8s.io/"
      - "rancher/"
      - "openpolicyagent/"
      - "ghcr.io/aquasecurity/"
      # Add your private registry here in real deployments
